--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,11 @@ dependencies = [
     "openai>=1.53.0",
     "pydantic>=2.9.2",
     "google-generativeai>=0.8.3",
+    "pandas>=2.2.3",
+    "matplotlib>=3.9.2",
+    "fastapi>=0.115.4",
+    "jinja2>=3.1.4",
+    "uvicorn>=0.32.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
