--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ dependencies = [
     "fastapi>=0.115.4",
     "jinja2>=3.1.4",
     "uvicorn>=0.32.0",
+    "tqdm>=4.67.0",
+    "anthropic>=0.39.0",
+    "google-cloud-translate>=3.18.0",
+    "google-genai>=0.3.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
@@ -30,6 +34,7 @@ managed = true
 dev-dependencies = [
     "ipykernel>=6.29.5",
     "pytest>=8.3.3",
+    "watchfiles>=1.0.3",
 ]
 
 [tool.hatch.metadata]
