--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ dependencies = [
     "anthropic>=0.39.0",
     "google-cloud-translate>=3.18.0",
     "google-genai>=0.6.0",
+    "flower>=2.0.1",
+    "celery[redis,sqlalchemy]>=5.4.0",
+    "boto3>=1.36.7",
 ]
 readme = "README.md"
 requires-python = ">= 3.12"
