--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,9 +32,8 @@ requires-python = ">= 3.12"
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
-[tool.rye]
-managed = true
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "ipykernel>=6.29.5",
     "pytest>=8.3.3",
     "watchfiles>=1.0.3",
